--- a/translations/tengyur/placeholders/008-006_toh1204-srianavilanamatantrapanjika.xml
+++ b/translations/tengyur/placeholders/008-006_toh1204-srianavilanamatantrapanjika.xml
@@ -9,8 +9,12 @@
                 <title xml:lang="Sa-Ltn" type="mainTitle">Śry­anāvila­nāma­tantra­pañjikā</title>
                 <title xml:lang="en" type="mainTitle">A Commentary on the Difficult Points of the Tantra known as “The Unsullied”</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="4"/>
                 <idno xml:id="UT23703-008-006"/>
             </publicationStmt>
             <sourceDesc>
@@ -33,6 +37,12 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT23703-008-006-3">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-26T10:16:28.365Z" type="translation-status" status="4" xml:id="UT23703-008-006-4">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-26T10:16:28.365Z" type="text-version" status="0.0.1" xml:id="UT23703-008-006-5">
+                    <desc>User set version to 0.0.1</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
