--- a/translations/kangyur/translations/043-012_toh75-the_sutra_of_gangottaras_questions.xml
+++ b/translations/kangyur/translations/043-012_toh75-the_sutra_of_gangottaras_questions.xml
@@ -26,7 +26,7 @@
         <editor role="finalReviewer" xml:id="UT22084-043-012-233">George FitzHerbert</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.2 <date>2024</date>
+                <edition>v 1.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -34,7 +34,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
           available to everyone. </publisher>
-        <availability status="1.a">
+        <availability status="1">
           <licence>
             <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
             <tei:p xmlns:tei="http://www.tei-c.org/ns/1.0">This work is provided under the protection of a Creative Commons CC BY-NC-ND
@@ -171,6 +171,12 @@
                 </change>
                 <change who="#andre" when="2024-03-24T12:14:06.868Z" type="text-version" status="1.0.2" xml:id="UT22084-043-012-239">
                     <desc>Glossary integration revised, activated in CG</desc>
+                </change>
+                <change who="#sameer" when="2024-04-28T11:23:06.497Z" type="translation-status" status="1" xml:id="UT22084-043-012-240">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2024-04-28T11:23:06.497Z" type="text-version" status="1.0.3" xml:id="UT22084-043-012-241">
+                    <desc>Included in App v 3.13</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
