--- a/translations/kangyur/translations/061-009_toh189-the_prediction_of_brahmasri.xml
+++ b/translations/kangyur/translations/061-009_toh189-the_prediction_of_brahmasri.xml
@@ -33,7 +33,7 @@
                                         Cotter</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.3 <date>2024</date>
+                <edition>v 1.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -42,7 +42,7 @@
                                         is a global non-profit initiative to translate all the
                                         Buddha’s words into modern languages, and to make them
                                         available to everyone. </publisher>
-                                <availability status="1.a">
+                                <availability status="1">
                                         <licence>
                                                 <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                                                 <p>This work is provided under the protection of a
@@ -178,6 +178,12 @@
                 </change>
                 <change who="#andre" when="2024-03-24T12:30:24.403Z" type="text-version" status="1.0.3" xml:id="UT22084-061-009-153">
                     <desc>Glossary integration revised, activated in CG</desc>
+                </change>
+                <change who="#sameer" when="2024-04-28T11:32:01.969Z" type="translation-status" status="1" xml:id="UT22084-061-009-154">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2024-04-28T11:32:01.969Z" type="text-version" status="1.0.4" xml:id="UT22084-061-009-155">
+                    <desc>Included in App v 3.13</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
