--- a/translations/kangyur/translations/094-020_toh743,1009-the_incantation_that_cleanses_all_the_obscurations_of_karma.xml
+++ b/translations/kangyur/translations/094-020_toh743,1009-the_incantation_that_cleanses_all_the_obscurations_of_karma.xml
@@ -34,7 +34,7 @@
                                         Cotter</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.2 <date>2024</date>
+                <edition>v 1.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -43,7 +43,7 @@
                                         is a global non-profit initiative to translate all the
                                         Buddha’s words into modern languages, and to make them
                                         available to everyone. </publisher>
-                                <availability status="1.a">
+                                <availability status="1">
                                         <licence>
                                                 <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                                                 <p>This work is provided under the protection of a
@@ -171,6 +171,12 @@
                 </change>
                 <change who="#john" when="2024-04-22T11:04:25.623Z" type="text-version" status="1.0.2" xml:id="UT22084-094-020-145">
                     <desc>Minor edits</desc>
+                </change>
+                <change who="#sameer" when="2024-04-28T11:35:58.211Z" type="translation-status" status="1" xml:id="UT22084-094-020-146">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2024-04-28T11:35:58.211Z" type="text-version" status="1.0.3" xml:id="UT22084-094-020-147">
+                    <desc>Included in App v 3.13</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
