--- a/translations/kangyur/translations/088-035_toh540,1078-the_incantation_of_surupa.xml
+++ b/translations/kangyur/translations/088-035_toh540,1078-the_incantation_of_surupa.xml
@@ -20,7 +20,7 @@
                 <editor role="TEImarkupEditor" xml:id="UT22084-088-035-46">Martina Cotter</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.2 <date>2024</date>
+                <edition>v 1.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -28,7 +28,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
                     and to make them available to everyone. </publisher>
-                <availability status="1.a">
+                <availability status="1">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC
@@ -162,6 +162,12 @@
                 <change who="#john" when="2024-04-22T10:49:59.826Z" type="text-version" status="1.0.2" xml:id="UT22084-088-035-118">
                     <desc>A few minor edits</desc>
                 </change>
+                <change who="#sameer" when="2024-04-28T11:39:24.621Z" type="translation-status" status="1" xml:id="UT22084-088-035-119">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2024-04-28T11:39:24.621Z" type="text-version" status="1.0.3" xml:id="UT22084-088-035-120">
+                    <desc>Included in App v 3.13</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -271,7 +277,7 @@
                     <milestone unit="chunk" xml:id="UT22084-088-035-61"/>
                     <p tid="13">The Chinese translation, <title xml:lang="en">The Beautiful, A
                             Dhāraṇī-Sūtra Spoken by the Buddha</title> (<title xml:lang="zh">佛說妙色陀羅尼經</title>, Taishō 1386) dates from a
-                        rather late period, between 989–99 <hi rend="small-caps">CE</hi>, and is the work of Faxian, who worked
+                        rather late period, between 989–99 <hi rend="small-caps">ce</hi>, and is the work of Faxian, who worked
                         under the aegis of the Northern Song dynasty’s famous Translation
                             Bureau.<note place="end" xml:id="UT22084-088-035-62"> On the life and
                             career of this Kashmiri scholar, see Orzech 2011, pp. 448–49. </note>
