--- a/translations/kangyur/translations/054-007_toh126-like_gold_dust.xml
+++ b/translations/kangyur/translations/054-007_toh126-like_gold_dust.xml
@@ -42,7 +42,7 @@
                                         Doctor</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.3 <date>2024</date>
+                <edition>v 1.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -185,6 +185,9 @@
                 <change who="#john" when="2024-04-18T17:18:17.538Z" type="text-version" status="1.0.3" xml:id="UT22084-054-007-1068">
                     <desc>Added a note to intro referencing note about the analogy, end edited the latter.</desc>
                 </change>
+                <change who="#konchog" when="2024-04-28T18:13:43.015Z" type="text-version" status="1.0.4" xml:id="UT22084-054-007-1069">
+                    <desc>Fixed one typo.</desc>
+                </change>
                         </revisionDesc>
                 </fileDesc>
         </teiHeader>
@@ -306,7 +309,7 @@
                                                 Denkarma imperial catalog.<note place="end" xml:id="UT22084-054-007-71"> Denkarma, folio
                                                   299.b; see also Herrmann-Pfandt 2008, pp. 114–15.
                                                   The Denkarma catalog is believed to have been
-                                                  first compiled ca. 812 <hi rend="small-caps">ce,</hi> with further additions for some years
+                                                  first compiled ca. 812 <hi rend="small-caps">ce</hi>, with further additions for some years
                                                   afterwards. This text is not listed in the
                                                   Phangthangma catalog believed to have been
                                                   compiled only a few years before the Denkarma.</note>
@@ -402,7 +405,7 @@
                                                 of an analogy,” said the Blessed One. “Why? Because,
                                                 Ānanda, learned people reach understanding through
                                                 analogies. Ānanda, take the analogy of a pool
-                                                measuring eight-thousand-leagues. It is so filled
+                                                measuring eight thousand leagues. It is so filled
                                                 with water that a crow can drink from it, it is of
                                                 equal depth on all sides, and it is covered with
                                                 lotus leaves. Over this pool someone then rides an
