--- a/translations/kangyur/placeholders/076-012_toh358-the_account_of_the_noble_deeds_of_sardulakarna.xml
+++ b/translations/kangyur/placeholders/076-012_toh358-the_account_of_the_noble_deeds_of_sardulakarna.xml
@@ -19,12 +19,12 @@
                 <sponsor xml:id="UT22084-076-012-7">Shin Nomura</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.6 <date>2024</date>
+                <edition>v 0.1.7 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-076-012"/>
                 <date/>
             </publicationStmt>
@@ -76,6 +76,12 @@
                 </change>
                 <change who="#line-tofte" when="2024-02-28T16:48:29.418Z" type="text-version" status="0.1.6" xml:id="UT22084-076-012-26">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-29T11:38:08.149Z" type="translation-status" status="2.b" xml:id="UT22084-076-012-27">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-29T11:38:08.149Z" type="text-version" status="0.1.7" xml:id="UT22084-076-012-28">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
