--- a/translations/kangyur/placeholders/088-028_toh534,861-the_incantation_the_essence_of_vairocana.xml
+++ b/translations/kangyur/placeholders/088-028_toh534,861-the_incantation_the_essence_of_vairocana.xml
@@ -12,11 +12,11 @@
                 <author role="translatorEng" xml:id="UT22084-088-028-2">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-088-028"/>
                 <date/>
             </publicationStmt>
@@ -62,6 +62,12 @@
                 </change>
                 <change who="#sameer" when="2024-04-01T09:04:50.448Z" type="text-version" status="0.0.5" xml:id="UT22084-088-028-9">
                     <desc>Updated vol. 88 and 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-29T12:46:27.379Z" type="translation-status" status="2.g" xml:id="UT22084-088-028-10">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-29T12:46:27.379Z" type="text-version" status="0.0.6" xml:id="UT22084-088-028-11">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
