--- a/translations/kangyur/placeholders/041-002_toh57-the_teaching_to_nanda_on_entering_the_womb.xml
+++ b/translations/kangyur/placeholders/041-002_toh57-the_teaching_to_nanda_on_entering_the_womb.xml
@@ -15,12 +15,12 @@
                 <sponsor xml:id="UT22084-041-002-3">Make Wang Xiao Juan</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2023</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-041-002"/>
                 <date/>
             </publicationStmt>
@@ -72,6 +72,12 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.11" xml:id="UT22084-041-002-15">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-29T13:25:37.757Z" type="translation-status" status="2.g" xml:id="UT22084-041-002-16">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-29T13:25:37.757Z" type="text-version" status="0.0.12" xml:id="UT22084-041-002-17">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
