--- a/translations/kangyur/placeholders/091-041_toh644,882-the_sutra_of_the_eight_mandalas.xml
+++ b/translations/kangyur/placeholders/091-041_toh644,882-the_sutra_of_the_eight_mandalas.xml
@@ -20,11 +20,11 @@
                 <consultant role="advisor" xml:id="UT22084-091-041-6">Meghan Howard</consultant>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-091-041"/>
                 <date/>
             </publicationStmt>
@@ -73,6 +73,12 @@
                 </change>
                 <change who="#sameer" when="2024-04-02T13:44:21.869Z" type="text-version" status="0.0.6" xml:id="UT22084-091-041-14">
                     <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-29T14:05:26.254Z" type="translation-status" status="2.h" xml:id="UT22084-091-041-15">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-29T14:05:26.254Z" type="text-version" status="0.0.7" xml:id="UT22084-091-041-16">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
