--- a/translations/kangyur/placeholders/048-005_toh105-the_dharma_discourse_on_the_eight_mandalas.xml
+++ b/translations/kangyur/placeholders/048-005_toh105-the_dharma_discourse_on_the_eight_mandalas.xml
@@ -18,11 +18,11 @@
                 <consultant role="projectManager" xml:id="UT22084-048-005-7">Ven. Konchog Tenzin (Mark Riege)</consultant>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.8 <date>2023</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-048-005"/>
                 <date/>
             </publicationStmt>
@@ -68,6 +68,12 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.8" xml:id="UT22084-048-005-17">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-29T14:06:18.794Z" type="translation-status" status="2.h" xml:id="UT22084-048-005-18">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-29T14:06:18.794Z" type="text-version" status="0.0.9" xml:id="UT22084-048-005-19">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
