--- a/translations/kangyur/translations/061-006_toh186_miracle_of_attaining_the_buddhas_powers.xml
+++ b/translations/kangyur/translations/061-006_toh186_miracle_of_attaining_the_buddhas_powers.xml
@@ -26,7 +26,7 @@
                 <consultant role="projectManager" xml:id="UT22084-061-006-306">Gregory Forgues</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.33.32 <date>2024</date>
+                <edition>v 1.33.33 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -183,6 +183,9 @@
                 <change who="#celso" when="2024-04-22T14:07:23.549Z" type="text-version" status="1.33.32" xml:id="UT22084-061-006-351">
                     <desc>Activated pending links</desc>
                 </change>
+                <change who="#celso" when="2024-04-30T11:40:32.457Z" type="text-version" status="1.33.33" xml:id="UT22084-061-006-356">
+                    <desc>Activated pending links</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -305,7 +308,7 @@
                             Perfection of Wisdom in Twenty-five Thousand Lines</ref>
                             </title>, Toh 9 (2023).</note>
                         <ref/> and <title xml:lang="en">Prajñāpāramitā in 10,000 lines</title>
-                        (Toh 11);<note place="end" xml:id="UT22084-061-006-263">See Padmakara Translation Group, trans. <title xml:lang="en">
+                        (Toh 11);<note place="end" xml:id="UT22084-061-006-263">See Padmakara Translation Group, trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh11.html">The Transcendent Perfection of Wisdom in Ten Thousand
                                     Lines</ref>
                             </title>, Toh 11 (2018).</note> the <title xml:lang="Sa-Ltn">Buddhāvataṃsaka</title> (Toh 44);<note place="end" xml:id="UT22084-061-006-264">This text is presented in the Kangyur as a single, long sūtra, although many of its 45
@@ -313,75 +316,79 @@
                                 <ref target="https://read.84000.co/knowledgebase/ornaments-buddhas.html">Buddhāvataṃsaka</ref>
                             </title>.</note> six sūtras
                         from the <title xml:lang="Sa-Ltn">Ratnakūṭa</title>, <title xml:lang="en">The Secrets of the Realized Ones</title> (<title xml:lang="Sa-Ltn">Tathāgatācintya­guhya­nirdeśa</title>, Toh
-                        47),<note place="end" xml:id="UT22084-061-006-342">David Fiordalis and Dharmachakra Translation Committee, trans. <title xml:lang="en">
+                        47),<note place="end" xml:id="UT22084-061-006-342">David Fiordalis and Dharmachakra Translation Committee, trans., <title xml:lang="en">
                                 <ref target="http://read.84000.co/translation/toh47.html">The Secrets of the Realized Ones
                             </ref>
                             </title>, Toh 47 (84000: Translating the Words of the 
-                            Buddha, 2023).</note> <title xml:lang="Sa-Ltn">Bodhi­sattva­piṭaka</title> (Toh 56),<note place="end" xml:id="UT22084-061-006-345">Norwegian Institute of Palaeography and Historical Philology, trans. <title xml:lang="en">
+                            Buddha, 2023).</note> <title xml:lang="Sa-Ltn">Bodhi­sattva­piṭaka</title> (Toh 56),<note place="end" xml:id="UT22084-061-006-345">Norwegian Institute of Palaeography and Historical Philology, trans., <title xml:lang="en">
                                 <ref target="http://read.84000.co/translation/toh56.html">The Collected Teachings on the Bodhisatva</ref>
                             </title>, Toh 56 (84000: Translating the Words of the 
                                 Buddha, 2023).</note> <title xml:lang="Sa-Ltn">Bhadra­māyākāra­vyākaraṇa</title> (Toh
                         65),<note place="end" xml:id="UT22084-061-006-349">Kīrtimukha Translation Group, trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh65.html">The Prophecy for Bhadra the Illusionist</ref>
                             </title>, Toh 65 (2024).</note> <title xml:lang="Sa-Ltn">Mahā­pratihārya­nirdeśa</title> (Toh 66)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh66.html"/>, <title xml:lang="Sa-Ltn">Maitreya­mahā­siṃha­nāda</title> (Toh
-                        67),<note place="end" xml:id="UT22084-061-006-294">See Karen Liljenberg and Ulrich Pagel. trans. <title xml:lang="en">
+                        67),<note place="end" xml:id="UT22084-061-006-294">See Karen Liljenberg and Ulrich Pagel. trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh67.html">The Great Lion’s Roar of Maitreya</ref>
                             </title>, Toh 67 (2023).</note> and <title xml:lang="Sa-Ltn">Acintya­buddha­viśaya­nirdeśa</title> (Toh 79)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh79.html"/>; and twenty-eight sūtras from the <title xml:lang="Bo-Ltn">mdo
                                 sde</title>, the <title xml:lang="Sa-Ltn">Bhadra­kalpika</title> (Toh 94),<note place="end" xml:id="UT22084-061-006-290">See
-                                    Dharmachakra Translation Committee, trans. <title xml:lang="en">
+                                    Dharmachakra Translation Committee, trans., <title xml:lang="en">
                                         <ref target="https://read.84000.co/translation/toh94.html">The Good Eon</ref>
                                     </title>, Toh 94 (2022).</note> <title xml:lang="Sa-Ltn">Saṃghāṭi­sūtra­dharma­paryāya</title>
                         (Toh 102)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh102.html"/>, <title xml:lang="Sa-Ltn">Karuṇā­puṇḍarīka</title> (Toh 112),
-                        <note place="end" xml:id="UT22084-061-006-298">See Roberts, Peter Alan. trans. <title xml:lang="en">
+                        <note place="end" xml:id="UT22084-061-006-298">See Roberts, Peter Alan. trans., <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh112.html">The White Lotus of Compassion</ref>
                         </title>, Toh 112 (2023).</note> <title xml:lang="Sa-Ltn">Saddharma­puṇḍarīka</title> (Toh
-                            113),<note place="end" xml:id="UT22084-061-006-265">See Peter Alan Roberts, trans. <title xml:lang="en">
+                            113),<note place="end" xml:id="UT22084-061-006-265">See Peter Alan Roberts, trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh113.html">The White Lotus of the Good Dharma</ref>
                             </title>, Toh 113 (2018b).</note>
                         <title xml:lang="Sa-Ltn">Sarva­dharma­guṇa­vyūha­rāja</title> (Toh 114),<note place="end" xml:id="UT22084-061-006-266">See
-                            Dharmachakra Translation Committee, trans. <title xml:lang="en">
+                            Dharmachakra Translation Committee, trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh114.html">The King of the Array of All Dharma Qualities</ref>
                             </title>, Toh 114 (2018).</note>
                         <title xml:lang="Sa-Ltn">Ratna­karaṇḍa</title> (Toh 117)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh117.html"/>, <title xml:lang="en">The King of Samādhis Sūtra</title> (Toh
-                            127),<note place="end" xml:id="UT22084-061-006-267">See Peter Alan Roberts, trans. <title xml:lang="en">
+                            127),<note place="end" xml:id="UT22084-061-006-267">See Peter Alan Roberts, trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh127.html">The King of Samādhis Sūtra</ref>
                             </title>, Toh 127 (2018a).</note>
-                        <title xml:lang="Sa-Ltn">Praśānta­viniścaya­prātihārya­samādhi</title> (Toh 129),<note place="end" xml:id="UT22084-061-006-284">See Dharmachakra Translation Committee, trans. <title xml:lang="en">
+                        <title xml:lang="Sa-Ltn">Praśānta­viniścaya­prātihārya­samādhi</title> (Toh 129),<note place="end" xml:id="UT22084-061-006-284">See Dharmachakra Translation Committee, trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh129.html">The Absorption of the Miraculous Ascertainment of
                                     Peace</ref>
-                            </title>, Toh 129 (2020c).</note> <title xml:lang="Sa-Ltn">Śūraṃgama­samādhi</title> (Toh 132)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh132.html"/>, <title xml:lang="Sa-Ltn">Catur­dāraka­samādhi</title> (Toh 136)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh136.html"/>, <title xml:lang="Sa-Ltn">Mahā­samnipāta­ratna­ketu­dhāraṇī</title> (Toh 138),<note place="end" xml:id="UT22084-061-006-268">See Dharmachakra
-                            Translation Committee, trans. <title xml:lang="en">
+                        </title>, Toh 129 (2020c).</note> <title xml:lang="Sa-Ltn">Śūraṃgama­samādhi</title> (Toh 132)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh132.html"/>, <title xml:lang="Sa-Ltn">Catur­dāraka­samādhi</title> (Toh 136),<note place="end" xml:id="UT22084-061-006-352">See Dharmachakra Translation Committee, trans., <title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh129.html">The Four Boys’ Absorption</ref>
+                        </title>, Toh 136 (2024a).</note> <title xml:lang="Sa-Ltn">Mahā­samnipāta­ratna­ketu­dhāraṇī</title> (Toh 138),<note place="end" xml:id="UT22084-061-006-268">See Dharmachakra
+                            Translation Committee, trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh138.html">The Ratnaketu Dhāraṇī</ref>
                             </title>, Toh 138 (2020a).</note>
                         <title xml:lang="Sa-Ltn">Tathāgata­mahā­karuṇā­nirdeśa</title> (Toh 147),<note place="end" xml:id="UT22084-061-006-269">See
-                            Anne Burchardi, trans. <title xml:lang="en">
+                            Anne Burchardi, trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh147.html">The Teaching on the Great Compassion of the
                                     Tathāgata</ref>
                             </title>, Toh 147 (2020).</note>
                         <title xml:lang="Sa-Ltn">Sāgara­mati­paripṛcchā</title> (Toh 152),<note place="end" xml:id="UT22084-061-006-270">See
-                            Dharmachakra Translation Committee, trans. <title xml:lang="en">
+                            Dharmachakra Translation Committee, trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh152.html">The Questions of Sāgaramati</ref>
                             </title>, Toh 152 (2020b).</note>
-                        <title xml:lang="Sa-Ltn">Anavatapta­nāga­rāja­paripṛcchā</title> (Toh 156)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh156.html"/>, <title xml:lang="Sa-Ltn">Druma­kinnara­rāja­paripṛcchā</title>
-                        (Toh 157),<note place="end" xml:id="UT22084-061-006-285">See the Dharmachakra Translation Committee, trans. <title xml:lang="en">
+                        <title xml:lang="Sa-Ltn">Anavatapta­nāga­rāja­paripṛcchā</title> (Toh 156),<note place="end" xml:id="UT22084-061-006-354">See the Dharmachakra Translation Committee, trans., <title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh156.html">The Questions of the Nāga King Anavatapta</ref>
+                        </title>, Toh 156 (2024b).</note> <title xml:lang="Sa-Ltn">Druma­kinnara­rāja­paripṛcchā</title>
+                        (Toh 157),<note place="end" xml:id="UT22084-061-006-285">See the Dharmachakra Translation Committee, trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh157.html">The Questions of the Kinnara King Druma</ref>
                             </title>, Toh 157 (2020d).</note> <title xml:lang="Sa-Ltn">Vikurvāṇa­rāja­paripṛcchā</title> (Toh 167)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh167.html"/>, <title xml:lang="Sa-Ltn">Mahāyānopadeśa</title> (Toh 169)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh169.html"/>, <title xml:lang="Sa-Ltn">Ākṣaya­mati­nirdeśa</title> (Toh
-                            175),<note place="end" xml:id="UT22084-061-006-271">See Jens Braarvig and David Welsh, trans. <title xml:lang="en">
+                            175),<note place="end" xml:id="UT22084-061-006-271">See Jens Braarvig and David Welsh, trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh175.html">The Teaching of Akṣayamati</ref>
                             </title>, Toh 175 (2020).</note>
-                        <title xml:lang="en"> The Sūtra of the Teaching of Vimalakīrti </title> (Toh 176),<note place="end" xml:id="UT22084-061-006-272">See Robert A. F. Thurman, trans. <title xml:lang="en">
+                        <title xml:lang="en"> The Sūtra of the Teaching of Vimalakīrti </title> (Toh 176),<note place="end" xml:id="UT22084-061-006-272">See Robert A. F. Thurman, trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh176.html">The Teaching of Vimalakīrti</ref>
                             </title>, Toh 176 (2017).</note>
                         <title xml:lang="Sa-Ltn">Buddha­balā­dhāna­prātihārya­vikurvāṇa­nirdeśa</title> (this text, Toh 186), <title xml:lang="Sa-Ltn">Mahā­bherī­hāraka­parivarta</title> (Toh 222)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh222.html"/>, <title xml:lang="Sa-Ltn">Trāyastriṃśat­parivarta</title> (Toh
                         223)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh223.html"/>, <title xml:lang="Sa-Ltn">Buddha­saṅgīti</title> (Toh 228)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh228.html"/>, <title xml:lang="Sa-Ltn">Mahā­megha</title> (Toh 232),
-                        <note place="end" xml:id="UT22084-061-006-292">See Mahamegha Translation Team, trans. <title xml:lang="en">
+                        <note place="end" xml:id="UT22084-061-006-292">See Mahamegha Translation Team, trans., <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh232.html">The Great Cloud (1)</ref>
                         </title>, Toh 232 (2022).</note>
-                        <title xml:lang="Sa-Ltn">Paramārtha­dharma­vijaya</title> (Toh 246),<note place="end" xml:id="UT22084-061-006-288">See UCSB Buddhist Studies Translation Group–2, trans. <title xml:lang="en">
+                        <title xml:lang="Sa-Ltn">Paramārtha­dharma­vijaya</title> (Toh 246),<note place="end" xml:id="UT22084-061-006-288">See UCSB Buddhist Studies Translation Group–2, trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh246.html">Victory of the Ultimate Dharma</ref>
                             </title>,
                             Toh 246 (2021).</note> <title xml:lang="Sa-Ltn">Saddharma­smṛtyupasthāna</title> (Toh
-                            287),<note place="end" xml:id="UT22084-061-006-273">See Dharmachakra Translation Committee, trans. <title xml:lang="en">
+                            287),<note place="end" xml:id="UT22084-061-006-273">See Dharmachakra Translation Committee, trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh287.html">The Application of Mindfulness of the Sacred Dharma</ref>
                             </title>, Toh 287 (2021).</note>
                         <title xml:lang="Bo-Ltn">mdzangs blun</title> (Toh 341)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh341.html"/>, and <title xml:lang="Sa-Ltn">Sumāgadhāvadāna</title> (Toh
@@ -1332,6 +1339,15 @@
                         <ref target="https://read.84000.co/translation/toh94.html">The Good Eon</ref>
                     </title> (<title xml:lang="Sa-Ltn">Bhadra­kalpika</title>, Toh 94). 84000: Translating the Words of the Buddha,
                         2022.</bibl>
+                    <bibl xml:id="UT22084-061-006-353">———(2024a), trans. <title xml:lang="en">
+                        <ref target="https://read.84000.co/translation/toh94.html">The Four Boys’ Absorption</ref>
+                    </title> (<title xml:lang="Sa-Ltn">Caturdāraka­samādhi</title>, Toh 136). 84000: Translating the Words of the Buddha,
+                        2024.</bibl>
+                    <bibl xml:id="UT22084-061-006-355">———(2024b), trans. <title xml:lang="en">
+                        <ref target="https://read.84000.co/translation/toh156.html">The Questions of the Nāga King Anavatapta</ref>
+                    </title> (<title xml:lang="Sa-Ltn">Anavatapta­nāgarāja­paripṛcchā</title>, Toh 156). 84000: Translating the Words of the Buddha,
+                        2024.</bibl>                    
+                    
                     <bibl xml:id="UT22084-061-006-120">Edgerton, Franklin. <title xml:lang="en">Buddhist Hybrid Sanskrit Grammar and
                             Dictionary</title>. Vol. 2: Dictionary. New Haven: Yale University Press, 1953.</bibl>
                     <bibl xml:id="UT22084-061-006-343">Fiordalis, David. and Dharmachakra Translation Committee,  trans. 
