--- a/translations/kangyur/placeholders/091-010_toh613,989-the_incantation_of_the_goddess_cunda.xml
+++ b/translations/kangyur/placeholders/091-010_toh613,989-the_incantation_of_the_goddess_cunda.xml
@@ -10,16 +10,17 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryacundadevīnāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lha mo skul byed ma zhes bya ba'i gzungs/</title>
                 <author role="translatorMain" xml:id="UT22084-091-010-1">84000 Associate Translators</author>
-                <author role="translatorEng" xml:id="UT22084-091-010-2">Adam Krug</author>
+                <author role="translatorEng" xml:id="UT22084-091-010-2">Adam C. Krug</author>
                 <editor role="projectEditor" xml:id="UT22084-091-010-16">Rory Lindsay</editor>
                 <editor role="copyEditor" xml:id="UT22084-091-010-25">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-091-010-35">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.14 <date>2024</date>
+                <edition>v 0.0.16 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-091-010"/>
                 <date/>
             </publicationStmt>
@@ -106,6 +107,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-04-15T09:43:35.142Z" type="text-version" status="0.0.14" xml:id="UT22084-091-010-30">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-25T10:16:22.164Z" type="text-version" status="0.0.15" xml:id="UT22084-091-010-36">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-30T13:44:24.07Z" type="translation-status" status="2.b" xml:id="UT22084-091-010-37">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-30T13:44:24.07Z" type="text-version" status="0.0.16" xml:id="UT22084-091-010-38">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
