--- a/translations/kangyur/placeholders/094-009_toh732,992-the_incantation_of_yasovati.xml
+++ b/translations/kangyur/placeholders/094-009_toh732,992-the_incantation_of_yasovati.xml
@@ -13,13 +13,14 @@
                 <author role="translatorEng" xml:id="UT22084-094-009-2">Adam Krug</author>
                 <editor role="projectEditor" xml:id="UT22084-094-009-13">Ryan Damron</editor>
                 <editor role="copyEditor" xml:id="UT22084-094-009-22">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-094-009-30">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-094-009"/>
                 <date/>
             </publicationStmt>
@@ -91,6 +92,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-04-15T09:49:11.601Z" type="text-version" status="0.0.10" xml:id="UT22084-094-009-25">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-25T10:17:05.975Z" type="text-version" status="0.0.11" xml:id="UT22084-094-009-31">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-30T13:47:18.853Z" type="translation-status" status="2.b" xml:id="UT22084-094-009-32">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-30T13:47:18.853Z" type="text-version" status="0.0.12" xml:id="UT22084-094-009-33">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
