--- a/translations/kangyur/placeholders/093-007_toh692,898-the_incantation_the_wishfulfilling_wheel_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-007_toh692,898-the_incantation_the_wishfulfilling_wheel_of_avalokitesvara.xml
@@ -16,7 +16,7 @@
                 <editor role="proofreader" xml:id="UT22084-093-007-6">Irina Zhambaldorzhieva</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2023</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -38,7 +38,7 @@
                     <ref>Toh 898</ref>
                     <biblScope>vol.100, ff.205v-213r(pp.409-425)</biblScope>
                     <location work="UT4CZ5369" count-pages="17">
-                        <volume number="100" start-page="409" end-page="425"/>
+                        <volume number="101" start-page="407" end-page="423"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12660" work="W22084"/>
@@ -72,6 +72,9 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.6" xml:id="UT22084-093-007-15">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-05-01T05:09:25.538Z" type="text-version" status="0.0.7" xml:id="UT22084-093-007-16">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
