--- a/translations/kangyur/placeholders/093-020_toh705,900-the_hundred_and_eight_names_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-020_toh705,900-the_hundred_and_eight_names_of_avalokitesvara.xml
@@ -13,7 +13,7 @@
                 <author role="translatorEng" xml:id="UT22084-093-020-9">Catherine Dalton</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.5 <date>2023</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -35,7 +35,7 @@
                     <ref>Toh 900</ref>
                     <biblScope>vol.100, ff.215v-217v(pp.430-434)</biblScope>
                     <location work="UT4CZ5369" count-pages="5">
-                        <volume number="100" start-page="430" end-page="434"/>
+                        <volume number="101" start-page="428" end-page="432"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12662" work="W22084"/>
@@ -66,6 +66,9 @@
                 </change>
                 <change who="#line-tofte" when="2023-10-03T14:22:57.199Z" type="text-version" status="0.0.5" xml:id="UT22084-093-020-10">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-05-01T05:11:18.584Z" type="text-version" status="0.0.6" xml:id="UT22084-093-020-11">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
