--- a/translations/kangyur/placeholders/091-080_toh682,901-the_sutra_the_essence_of_amoghapasa.xml
+++ b/translations/kangyur/placeholders/091-080_toh682,901-the_sutra_the_essence_of_amoghapasa.xml
@@ -13,7 +13,7 @@
                 <author role="translatorEng" xml:id="UT22084-091-080-2">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -35,7 +35,7 @@
                     <ref>Toh 901</ref>
                     <biblScope>vol.100, ff.217v-223v(pp.434-446)</biblScope>
                     <location work="UT4CZ5369" count-pages="13">
-                        <volume number="100" start-page="434" end-page="446"/>
+                        <volume number="101" start-page="432" end-page="444"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12663" work="W22084"/>
@@ -60,6 +60,9 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-091-080-8">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-05-01T05:12:07.884Z" type="text-version" status="0.0.5" xml:id="UT22084-091-080-9">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
