--- a/translations/kangyur/placeholders/093-014_toh699,904-the_incantation_of_samantabhadra.xml
+++ b/translations/kangyur/placeholders/093-014_toh699,904-the_incantation_of_samantabhadra.xml
@@ -13,7 +13,7 @@
                 <author role="translatorEng" xml:id="UT22084-093-014-5">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -34,7 +34,7 @@
                     <ref>Toh 904</ref>
                     <biblScope>vol.100, ff.228v-230v(pp.456-460)</biblScope>
                     <location work="UT4CZ5369" count-pages="5">
-                        <volume number="100" start-page="456" end-page="460"/>
+                        <volume number="101" start-page="454" end-page="458"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12666" work="W22084"/>
@@ -57,6 +57,9 @@
                 </change>
                 <change who="#admin" when="2023-12-07T15:08:28.13Z" type="text-version" status="0.0.1" xml:id="UT22084-093-014-7">
                     <desc>script-increment-version-published</desc>
+                </change>
+                <change who="#sameer" when="2024-05-01T05:14:11.792Z" type="text-version" status="0.0.2" xml:id="UT22084-093-014-8">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
