--- a/translations/kangyur/placeholders/093-012_toh697,905-the_incantation_of_nilakantha.xml
+++ b/translations/kangyur/placeholders/093-012_toh697,905-the_incantation_of_nilakantha.xml
@@ -15,7 +15,7 @@
                 <consultant role="projectManager" xml:id="UT22084-093-012-4">Péter-Dániel Szántó</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2023</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -37,7 +37,7 @@
                     <ref>Toh 905</ref>
                     <biblScope>vol.100, ff.231r-232r(pp.461-463)</biblScope>
                     <location work="UT4CZ5369" count-pages="3">
-                        <volume number="100" start-page="461" end-page="463"/>
+                        <volume number="101" start-page="459" end-page="461"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12667" work="W22084"/>
@@ -65,6 +65,9 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-093-012-11">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-05-01T05:15:42.547Z" type="text-version" status="0.0.6" xml:id="UT22084-093-012-12">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
