--- a/translations/kangyur/placeholders/093-013_toh698,908-the_incantation_undeterred_through_compassion.xml
+++ b/translations/kangyur/placeholders/093-013_toh698,908-the_incantation_undeterred_through_compassion.xml
@@ -13,7 +13,7 @@
                 <author role="translatorEng" xml:id="UT22084-093-013-5">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -34,7 +34,7 @@
                     <ref>Toh 908</ref>
                     <biblScope>vol.100, ff.239r-240r(pp.477-479)</biblScope>
                     <location work="UT4CZ5369" count-pages="3">
-                        <volume number="100" start-page="477" end-page="479"/>
+                        <volume number="101" start-page="475" end-page="477"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12670" work="W22084"/>
@@ -57,6 +57,9 @@
                 </change>
                 <change who="#admin" when="2023-12-07T15:09:20.425Z" type="text-version" status="0.0.1" xml:id="UT22084-093-013-7">
                     <desc>script-increment-version-published</desc>
+                </change>
+                <change who="#sameer" when="2024-05-01T05:18:37.819Z" type="text-version" status="0.0.2" xml:id="UT22084-093-013-8">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
