--- a/translations/kangyur/placeholders/093-011_toh696,910-the_incantation_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-011_toh696,910-the_incantation_of_avalokitesvara.xml
@@ -13,7 +13,7 @@
                 <author role="translatorEng" xml:id="UT22084-093-011-5">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -34,7 +34,7 @@
                     <ref>Toh 910</ref>
                     <biblScope>vol.100, ff.241v-242r(pp.482-483)</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="100" start-page="482" end-page="483"/>
+                        <volume number="101" start-page="480" end-page="481"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12672" work="W22084"/>
@@ -57,6 +57,9 @@
                 </change>
                 <change who="#admin" when="2023-12-07T15:10:40.773Z" type="text-version" status="0.0.1" xml:id="UT22084-093-011-7">
                     <desc>script-increment-version-published</desc>
+                </change>
+                <change who="#sameer" when="2024-05-01T05:22:16.148Z" type="text-version" status="0.0.2" xml:id="UT22084-093-011-8">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
