--- a/translations/kangyur/placeholders/093-010_toh695,911-the_essence_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-010_toh695,911-the_essence_of_avalokitesvara.xml
@@ -12,7 +12,7 @@
                 <author role="translatorEng" xml:id="UT22084-093-010-5">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -33,7 +33,7 @@
                     <ref>Toh 911</ref>
                     <biblScope>vol.100, ff.pp.242r-242r(483-483)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="100" start-page="483" end-page="483"/>
+                        <volume number="101" start-page="481" end-page="481"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12673" work="W22084"/>
@@ -56,6 +56,9 @@
                 </change>
                 <change who="#admin" when="2023-12-07T15:02:12.257Z" type="text-version" status="0.0.1" xml:id="UT22084-093-010-7">
                     <desc>script-increment-version-published</desc>
+                </change>
+                <change who="#sameer" when="2024-05-01T05:22:51.39Z" type="text-version" status="0.0.2" xml:id="UT22084-093-010-8">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
