--- a/translations/kangyur/placeholders/090-047_toh603,913-the_incantation_of_the_apex_of_compassion.xml
+++ b/translations/kangyur/placeholders/090-047_toh603,913-the_incantation_of_the_apex_of_compassion.xml
@@ -13,6 +13,10 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">snying rje'i mchog ces bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Karuṇāgranāmadhāraṇī</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.2 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
                 <availability status=""/>
                 <idno xml:id="UT22084-090-047"/>
@@ -31,7 +35,7 @@
                     <ref>Toh 913</ref>
                     <biblScope>vol.100, ff.242v-244v(pp.484-488)</biblScope>
                     <location work="UT4CZ5369" count-pages="5">
-                        <volume number="100" start-page="484" end-page="488"/>
+                        <volume number="101" start-page="482" end-page="486"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12675" work="W22084"/>
@@ -42,6 +46,9 @@
             
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-090-047-1">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-05-01T05:24:08.915Z" type="text-version" status="0.0.2" xml:id="UT22084-090-047-2">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
